# schema-tools-templates

./: README.md
.github/workflows/: build.yaml  test.yaml
rust/: README.md
rust/_common/: _models.j2  extensions.j2  macros.j2  models.j2
rust/client/: endpoints.j2  error.j2  extra.j2  mod.j2  models-client.j2
rust/model/: models-model.j2
rust/rabbitmq/: actix.j2  extensions.j2  extra.j2  mod.j2  models-message.j2
rust/rabbitmq-tokio/: config.j2  connection.j2  consumer.j2  extensions.j2  mod.j2  models-message.j2  producer.j2  shutdown.j2  trace.j2
rust/server-actix/: endpoints.j2  extra.j2  mod.j2  qs.j2  service.j2
rust/server-axum/: endpoints.j2  extra.j2  mod.j2  models-server.j2  qs.j2  service-endpoints.j2  service.j2
tests/rust/: .gitignore  Cargo.toml  Makefile
tests/rust-axum/: Cargo.toml  Makefile
tests/rust-axum-relaxed/: Cargo.toml  Makefile
tests/rust-axum-relaxed/spec/api/: api.yaml
tests/rust-axum-relaxed/spec/api/components/: schemas.yaml
tests/rust-axum-relaxed/spec/api/components/accessories/: parameters.yaml  request-bodies.yaml
tests/rust-axum-relaxed/spec/api/components/devices/: parameters.yaml  responses.yaml  schemas.yaml
tests/rust-axum-relaxed/spec/api/components/locations/: parameters.yaml  request-bodies.yaml
tests/rust-axum-relaxed/spec/message/components/devices/: created-v1.yaml  deleted-v1.yaml  updated-v1.yaml
tests/rust-axum-relaxed/src/: main.rs
tests/rust-axum/spec/api/: api.yaml  types.yaml
tests/rust-axum/spec/api/components/: parameters.yaml  schemas.yaml
tests/rust-axum/spec/api/components/accessories/: parameters.yaml  responses.yaml  schemas.yaml
tests/rust-axum/spec/api/components/devices/: parameters.yaml  request-bodies.yaml  responses.yaml  schemas.yaml
tests/rust-axum/spec/api/components/locations/: responses.yaml  schemas.yaml
tests/rust-axum/spec/message/: all.yaml
tests/rust-axum/spec/message/components/: definitions.yaml
tests/rust-axum/src/: main.rs
tests/rust/spec/api/: api.yaml  types.yaml
tests/rust/spec/api/components/: responses.yaml
tests/rust/spec/api/components/accessories/: parameters.yaml  responses.yaml  schemas.yaml
tests/rust/spec/api/components/devices/: parameters.yaml  schemas.yaml
tests/rust/spec/message/components/: definitions.yaml
tests/rust/src/: main.rs
tests/rust/src/client/: mod.rs
