[package]
name = "schema-tools-tests"
version = "0.1.0"
authors = ["Kacper Stasik <kacper@stasik.eu>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

axum = "0.5.1"
tower-service = "0.3.1"
log = "0.4"
env_logger = "0.8"
futures-core = "0.3"
futures = "0.3"
serde_qs = "0.8.5"
async-trait = "0.1.52"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "serde"] }

# server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
regex = "1"
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.15.0"

opentelemetry = { version = "0.16", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.9", features = ["tonic", "metrics"] }

# client
reqwest = { version = "0.11", features = ["json"] }