[package]
name = "schema-tools-tests"
version = "0.1.0"
authors = ["Kacper Stasik <kacper@stasik.eu>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

axum = { version = "0.8.1", features = ["macros"] }
tower-service = "0.3"
log = "0.4"
env_logger = "0.11.3"
futures-core = "0.3"
futures = "0.3"
serde_qs = "0.13.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }

# server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
regex = "1"
garde = { version = "0.22.0", features = ["derive", "regex"] }
once_cell = "1.20.2"
chrono = { version = "0.4", features = ["serde"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.28.0"

opentelemetry = { version = "0.27.1", features = ["trace", "metrics"] }
opentelemetry_sdk = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic", "metrics"] }

# client
reqwest = { version = "0.12.5", features = ["json"] }
