[package]
name = "schema-tools-tests"
version = "0.1.0"
authors = ["Kacper Stasik <kacper@stasik.eu>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.19"
log = "0.4"
env_logger = "0.11.3"
futures-core = "0.3"
futures = "0.3"
serde_qs = "0.12.0"
actix-utils = "3.0.0"

# server
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
regex = "1"
garde = { version = "0.18.0", features = ["derive", "regex"] }
once_cell = "1.18.0"

# messages
lapin = { version = "2.3.1" }
chrono = "0.4"
amq-protocol-types = "7.1.2"
actix = "0.13"
actix-rt = "2.5"
backoff = "0.4"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.23.0"

opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
opentelemetry_sdk = "0.22"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic", "metrics"] }

# client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-rt = "2.8"
