[package]
name = "schema-tools-tests"
version = "0.1.0"
authors = ["Kacper Stasik <kacper@stasik.eu>"]
edition = "2018"

[dependencies]
actix-web = "4.8.0"
log = "0.4"
env_logger = "0.11.3"
futures-core = "0.3"
futures = "0.3"
serde_qs = "0.13.0"
actix-utils = "3.0.0"

# server
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
regex = "1"
garde = { version = "0.22.0", features = ["derive", "regex"] }
once_cell = "1.20.2"

# messages
lapin = { version = "2.5.0" }
chrono = "0.4"
amq-protocol-types = "7.1.2"
actix = "0.13"
actix-rt = "2.5"
backoff = "0.4"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.28.0"

opentelemetry = { version = "0.27.1", features = ["trace", "metrics"] }
opentelemetry_sdk = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic", "metrics"] }

# client
reqwest = { version = "0.12.5", features = ["json"] }

[dev-dependencies]
actix-rt = "2.8"
